tests/unit/operations/comparissons/compilation_errors/error_2.rb
true > nil # NoMethodError: undefined method `>' for true:Bool
